--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>This is my header</h1>    <link rel="stylesheet" href="style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>sample site</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+   
+    <h1>This is my header</h1>
+    
+</body>
+</html>
+
